--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -60,5 +60,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde dolorum, re
 
  </section>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
