--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -8,7 +8,7 @@
 </head>
 <body >
     <nav class="fixedLeftNav">
-        <ul>
+        <ul class="hidden">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">FAQ</a></li>
@@ -18,6 +18,8 @@
         </ul>
 
     </nav>
+
+   
     <div class="container">
     <main class="centerText">
         <img  src="man studying.jpg">
@@ -60,5 +62,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde dolorum, re
 
  </section>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
