--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
-<body >
-    <nav class="fixedLeftNav">
+<body class="relative">
+    <nav class=" leftNav closedLeftNav">
+        <div class="centerContent" style="max-width: 15px"><i class="fas fa-ellipsis-v"></i></div>
         <ul class="hidden">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -31,6 +33,8 @@
         </p>
     </main>
     
+
+
  <section class="centerText">
     <h2>Another Section</h2>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde dolorum, reiciendis enim minus animi, nesciunt, eum possimus porro inventore vero non exercitationem? Eius,
