here are my changes

--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -21,7 +21,7 @@
 
     </nav>
 
-   
+   <img class="three_Quarters" src="swing trading.webp">
     <div class="container">
     <main class="centerText">
         <img  src="man studying.jpg">
