Created 3 columns in flex box container

--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -66,6 +66,18 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde dolorum, re
 
  </section>
 </div>
+<h2 class="centerText threeWays">Three Ways To Do Something</h2>
+
+<div class="flexCols3">
+
+    <div><h3 class="centerText">Heading One</h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corporis perferendis odio aperiam deserunt consequuntur voluptatibus nesciunt fuga unde ea aliquid magnam tempore, quo maiores ut laboriosam, ullam illum assumenda. Omnis at voluptatum quo, obcaecati, eius aperiam, et dignissimos adipisci magnam culpa odit ratione quisquam aut nulla blanditiis ipsum earum fugiat dolor tempore ex porro accusantium pariatur. Voluptates voluptas ratione qui sed eveniet optio illo ut excepturi sequi veritatis, perferendis placeat deleniti quas nam corporis incidunt quod doloremque praesentium earum? Error in dolorum incidunt voluptatem qui unde, at eum eos voluptates totam nulla nobis perferendis exercitationem, delectus numquam facere distinctio?</div>
+    <div><h3 class="centerText">Heading Two</h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure atque ad officia, porro nulla itaque consequatur eveniet rem facere doloribus eaque eius nesciunt suscipit. Veniam, nulla, ratione culpa odio asperiores vero voluptatum praesentium necessitatibus neque cum et delectus nesciunt soluta! Iure aspernatur beatae ad, tenetur quasi facilis molestias numquam repellendus, rerum ex cum aliquid cupiditate odit impedit praesentium, delectus porro blanditiis eligendi at nobis eveniet reiciendis autem necessitatibus! Aliquid pariatur, soluta facilis nemo illo iusto minima molestiae eius commodi libero dolores at cumque alias dicta et consectetur, doloremque ullam deleniti vitae omnis! Voluptatibus tempore ducimus dicta debitis quas eveniet ipsum?</div>
+    <div><h3 class="centerText">Heading Three</h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores explicabo quaerat odit voluptates neque beatae laudantium at aliquam dolorem, accusamus nobis debitis et cum corrupti, excepturi facere nam eos iusto, deserunt possimus reprehenderit architecto voluptate ab recusandae. Quaerat itaque eos eius. Laborum tenetur explicabo temporibus ullam velit assumenda quibusdam facilis, unde ut natus deserunt quos, facere optio maxime exercitationem maiores. Necessitatibus, cumque mollitia odio voluptatum illo quibusdam architecto. Modi impedit vel fugit hic quas delectus ipsum sed aspernatur perferendis ipsa dolorum qui corporis sapiente molestiae, distinctio minima vitae omnis voluptatum? Reprehenderit ab ipsa eaque consequatur adipisci, omnis perspiciatis? Ab, recusandae?</div>
+</div>
+
+<footer class="FAQ">
+
+</footer>
 
 <script src="script.js"></script>
 </body>
