started to change the navBar to the bottom

--- a/resonsive_test.html
+++ b/resonsive_test.html
@@ -21,10 +21,10 @@
 
     </nav>
 
-   <img class="three_Quarters" src="swing trading.webp">
+   <img class="top_Right" src="swing trading.webp">
     <div class="container">
     <main class="centerText">
-        <img  src="man studying.jpg">
+        <img  class="studyingIMG" src="man studying.jpg">
         <h1>My New Website</h1>
         <p>Welcome to my website where I am currently learning all about front end web development including html, css, javascript, responsive layout,
             git, github, and regex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eligendi possimus consequuntur est eaque et modi nobis quam corporis assumenda.
@@ -84,7 +84,18 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat unde dolorum, re
 </div>
 
 <footer class="FAQ">
+    <nav class=" bottomNav">
+        <div class="centerContent" style="max-width: 15px"><i class="fas fa-ellipsis-v"></i></div>
+        <ul class="hidden">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Hours</a></li>
+            <li><a href="#">Special Events</a></li>
+            <li><a href="#">Legal</a></li>
+        </ul>
 
+    </nav>
 </footer>
 
 <script src="script.js"></script>
